--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.24.6",
+    "browser-sync": "^2.26.13",
     "del": "^3.0.0",
     "fancy-log": "^1.3.2",
-    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-compile-handlebars": "^0.6.1",
@@ -26,6 +25,13 @@
     "gulp-sass-bulk-import": "^1.0.1",
     "gulp-uglify": "^3.0.1",
     "gulp-watch": "^5.0.1",
-    "yargs": "^12.0.1"
+    "yargs": "^12.0.1",
+    "natives": "^1.1.6"
+  },
+  "dependencies": {
+    "graceful-fs": {
+      "version": "4.2.2"
+    },
+    "gulp": "^3.9.1"
   }
 }
